syntax = "proto3";

package test;
import "google/protobuf/timestamp.proto";
option java_package = "test.stencil";

message One {
  int64 field_one = 1;
}

message Two {
  message Three {
      string data = 1;
      google.protobuf.Timestamp timestamp = 3;
  }
  Three id = 1;
  message Four {
      Four recursive = 2;
      string field_two = 3;
      message Five {
          double id = 1;
      }
  }
}
